--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 
 .env
 # dependencies
-Frontend/node_modules
-Backend/node_modules
+Frontend/node_modules/
+Backend/node_modules/
 /.pnp
 .pnp.js
 
